--- a/templates/show_hotels.html
+++ b/templates/show_hotels.html
@@ -12,17 +12,17 @@
 		<form action="" method="post">
 		
 			<div class="form-check form-check-inline">
-			  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="{{request.form.option1}}">
+			  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name = "option1">
 			  <label class="form-check-label" for="inlineCheckbox1">Country</label>
 			</div>
 			
 			<div class="form-check form-check-inline">
-			  <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="{{request.form.option2}}">
+			  <input class="form-check-input" type="checkbox" id="inlineCheckbox2" name = "option2">
 			  <label class="form-check-label" for="inlineCheckbox2">City</label>
 			</div>
 			
-		    <input type="text" placeholder="Country" name="Country" value="{{request.form.country }}">
-		    <input type="text" placeholder="City" name="City" value="{{request.form.city }}">
+		    <input type="text" placeholder="Country" name="country" value="{{request.form.country}}">
+		    <input type="text" placeholder="City" name="city" value="{{request.form.city}}">
 		    <input class="btn btn-default" type="submit" value="Submit">
 		</form>
 			{% block content %}
@@ -39,4 +39,3 @@
 	</div>
   </body>
 </html>
-
