--- a/templates/show_hotels.html
+++ b/templates/show_hotels.html
@@ -1,41 +1,81 @@
 <html>
-  <head>
-    <title>Show Hotels</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
-  </head>
+	<head>
+    	<title>Show Hotels</title>
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
+  	</head>
 <body>
     <div class="container">
       	<h1>Tags</h1>
       	<br>
       	
 		<form action="" method="post">
-		
 			<div class="form-check form-check-inline">
-			  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name = "option1">
-			  <label class="form-check-label" for="inlineCheckbox1">Country</label>
+				<input class="form-check-input" type="checkbox" id="inlineCheckbox1" name = "option1">
+				<label class="form-check-label" for="inlineCheckbox1">Country</label>
 			</div>
 			
 			<div class="form-check form-check-inline">
-			  <input class="form-check-input" type="checkbox" id="inlineCheckbox2" name = "option2">
-			  <label class="form-check-label" for="inlineCheckbox2">City</label>
+			  	<input class="form-check-input" type="checkbox" id="inlineCheckbox2" name = "option2">
+			  	<label class="form-check-label" for="inlineCheckbox2">City</label>
+			</div>
+
+			<div class="input-group mb-3">
+				<label class="input-group-text" for="Country">Country</label>
+				<select class="form-select" id="Country form" name="country">
+				  	<option selected>Choose Country</option>
+					
+					{% block content1 %}
+					{% if error %}
+						<p class="error"><strong>Error:</strong> {{ data.error }}</p>
+					{% else %}
+					{% for x in data.country %}
+						<option value="{{ x }}"> {{ x }} </option>
+					{% endfor %}
+					{% endif %}
+					{% endblock %}	
+
+				</select>
 			</div>
 			
-		    <input type="text" placeholder="Country" name="country" value="{{request.form.country}}">
-		    <input type="text" placeholder="City" name="city" value="{{request.form.city}}">
-		    <input class="btn btn-default" type="submit" value="Submit">
+			<div class="input-group mb-3">
+				<span class="input-group-text">City</span>
+				<input type="text" class="form-control" name="city">
+			</div>
+			
+		    <input class="btn btn-primary" type="submit" value="Search">
 		</form>
-			{% block content %}
-		  {% if error %}
-		    <p class="error"><strong>Error:</strong> {{ data.error }}</p>
-		  {% else %}
-		  {% for x in data.data %}
-		  <div> 
-		  		{{ x[0] }} ---------------- {{ x[1] }} ---------------- {{ x[2] }} ---------------- {{ x[3] }}
-		  </div>
-		  {% endfor %}
-		  {% endif %}
-		  {% endblock %}		 
+
+		{% block content3 %}
+		{% if error %}
+			<p class="error"><strong>Error:</strong> {{ data.error }}</p>
+		{% else %}
+		
+		<div class="container-fluid">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+					  	<th scope="col">Hotel Name</th>
+					  	<th scope="col">Address</th>
+					  	<th scope="col">City</th>
+					  	<th scope="col">Country</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for x in data.data %}
+					<tr>
+						<td>{{ x[0] }}</td>
+						<td>{{ x[1] }}</td>
+						<td>{{ x[2] }}</td>
+						<td>{{ x[3] }}</td>
+					</tr>
+					{% endfor %}
+					{% endif %}
+					{% endblock %}
+				</tbody>
+
+			</table>
+		</div>
 	</div>
   </body>
 </html>
