--- a/templates/show_hotels.html
+++ b/templates/show_hotels.html
@@ -10,15 +10,15 @@
       	<br>
       	
 		<form action="" method="post">
-			<div class="form-check form-check-inline">
-				<input class="form-check-input" type="checkbox" id="inlineCheckbox1" name = "option1">
-				<label class="form-check-label" for="inlineCheckbox1">Country</label>
-			</div>
-			
-			<div class="form-check form-check-inline">
-			  	<input class="form-check-input" type="checkbox" id="inlineCheckbox2" name = "option2">
-			  	<label class="form-check-label" for="inlineCheckbox2">City</label>
-			</div>
+<!--			<div class="form-check form-check-inline">-->
+<!--				<input class="form-check-input" type="checkbox" id="inlineCheckbox1" name = "option1">-->
+<!--				<label class="form-check-label" for="inlineCheckbox1">Country</label>-->
+<!--			</div>-->
+<!--			-->
+<!--			<div class="form-check form-check-inline">-->
+<!--			  	<input class="form-check-input" type="checkbox" id="inlineCheckbox2" name = "option2">-->
+<!--			  	<label class="form-check-label" for="inlineCheckbox2">City</label>-->
+<!--			</div>-->
 
 			<div class="input-group mb-3">
 				<label class="input-group-text" for="Country">Country</label>
