--- a/templates/room_details.html
+++ b/templates/room_details.html
@@ -28,7 +28,7 @@
 		{% else %}
 		
 		<div class="container-fluid">
-			<table class="table table-striped">
+			<table class="table table-striped table-bordered">
 				<thead>
 					<tr>
 					  	<th scope="col">Room Amenities</th>
