--- a/templates/show_hotels.html
+++ b/templates/show_hotels.html
@@ -52,7 +52,7 @@
 		{% else %}
 		
 		<div class="container-fluid">
-			<table class="table table-striped">
+			<table class="table table-striped table-bordered">
 				<thead>
 					<tr>
 					  	<th scope="col">Hotel Name</th>
