--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,6 +10,7 @@
       <h1>Welcome to Flask!</h2>
       <br>
       <p>Click <a href="/">here</a> to go home.</p>
+      <p>Click <a href="/login">here</a> to go to login page.</p>
     </div>
   </body>
 </html>
