--- a/templates/room_details.html
+++ b/templates/room_details.html
@@ -28,6 +28,38 @@
 		{% else %}
 		
 		<div class="container-fluid">
+			<form action="" method="post">
+				<div>
+					<div class="input-group mb-3">
+						<label class="input-group-text" for="Room Amenities">Room Amenities</label>
+						<select class="form-select" id="ra form" name="ra">
+							<option selected>Choose Room Amenities</option>
+
+							{% if error %}
+								<p class="error"><strong>Error:</strong> {{ data.error }}</p>
+							{% else %}
+							{% for x in data.ra %}
+								<option value="{{ x }}"> {{ x }} </option>
+							{% endfor %}
+							{% endif %}
+							
+		
+						</select>
+					</div>
+				</div>
+
+				<div class="input-group mt-3 mb-3">
+					<span class="input-group-text">Min Price</span>
+					<input type="text" class="form-control" name="startprice">
+				</div>
+
+				<div class="input-group mt-3 mb-3">
+					<span class="input-group-text">Max Price</span>
+					<input type="text" class="form-control" name="endprice">
+				</div>
+
+				<input class="btn btn-primary" type="submit" value="Search">
+			</form>
 			<table class="table table-striped table-bordered">
 				<thead>
 					<tr>
