--- a/templates/edit_hotel_more.html
+++ b/templates/edit_hotel_more.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Add Hotel</title>
+    <title>Edit More Information</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -35,11 +35,7 @@
         {% if shift %}
         <h1>Information has been added</h1>
         <td><a class="btn btn-primary" href="{{url_for('admin_page')}}">Go to Admin Page</a></td>
-        <td><a class="btn btn-primary" href="{{url_for('add_hotel')}}">Add Another Hotel</a></td>
-        {% endif %}
-        {% if error %}
-        <p class="error"><strong>Error: </strong>Fill All the Entries</p><br>
-
+        <td><a class="btn btn-primary" href="{{url_for('edit_hotel')}}">Edit Another Hotel</a></td>
         {% endif %}
     </div>
 </body>
