--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,7 +10,8 @@
       <h1>Welcome to Flask!</h2>
       <br>
       <p>Click <a href="/">here</a> to go home.</p>
-      <p>Click <a href="/login">here</a> to go to login page.</p>
+      <p>Click <a href="/user_login">here</a> to go to login page.</p>
+      <p>Click <a href="/admin_login">here</a> to go to admin page.</p>
     </div>
   </body>
 </html>
