--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,54 @@
+
+
+
 <html>
   <head>
-    <title>Flask Intro - login page</title>
+    <title>Login User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
-      <h1>Please login</h1>
-      <br>
-      <form action="" method="post">
-        <input type="text" placeholder="Username" name="username" value="{{
-          request.form.username }}">
-         <input type="password" placeholder="Password" name="password" value="{{
-          request.form.password }}">
+<section class="vh-100">
+  <div class="container py-5 h-100">
+    <div class="row d-flex align-items-center justify-content-center h-100">
+      <div class="col-md-8 col-lg-7 col-xl-6">
+        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg" class="img-fluid" alt="Phone image">
+      </div>
+      <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+        <form action="" method="post">
+
         <input class="btn btn-default" type="submit" value="Login">
-      </form>
-      {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
-      {% endif %}
+        
+          <!-- Email input -->
+          <div class="form-outline mb-4">
+            <input type="text" id="form1Example13" class="form-control form-control-lg" placeholder="Username" name="username" value="{{
+          request.form.username }}" />
+            <label class="form-label" for="form1Example13">Email username</label>
+          </div>
+
+          <!-- Password input -->
+          <div class="form-outline mb-4">
+            <input type="password" id="form1Example23" class="form-control form-control-lg" placeholder="Password" name="password" value="{{
+          request.form.password }}" />
+            <label class="form-label" for="form1Example23">Password</label>
+          </div>
+
+
+          <!-- Submit button -->
+          <button type="submit" class="btn btn-primary btn-lg btn-block" value="Login">Login</button>
+        </form>
+      </div>
+       {% if error %}
+ <div class="alert alert-danger" role="alert">
+<strong>Error:</strong> {{ error }}
+</div>
     </div>
+  </div>
+</section>
+
+     
+
+      {% endif %}
+
   </body>
 </html>
-
