--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -1,25 +1,79 @@
+
+
+
 <html>
 	<head>
     	<title>Show Rooms</title>
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   	</head>
+  	
     <body>
-        <div class="container">
-            <div>
-                <h2>User Details</h2>
-                <ul>
-                    <li>Username: {{ data.user_details[1] }}</li>                
-                    <li>Name: {{ data.user_details[2] }}</li>
-                    <li>Address: {{ data.user_details[3] }}</li>
-                    <li>Email: {{ data.user_details[4] }}</li>
-                    <li>Phone: {{ data.user_details[5] }}</li>
-                    <li>Wallet Balance: {{ data.user_details[6] }}</li>
-                </ul>
-
-                <a class="btn btn-primary" href="/edit_user_detail">Edit Details</a>
-                <a class="btn btn-primary ms-5" href="/addMoney">Add Money</a>
+<section class="vh-100" style="background-color: #f4f5f7;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center  h-100">
+      <div class="col col-lg-6 mb-4 mb-lg-0">
+        <div class="card mb-3" style="border-radius: .5rem;">
+          <div class="row g-0">
+            <div class="col-md-4 gradient-custom text-center text-white" style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
+              <img
+                src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+                alt="Avatar"
+                class="img-fluid my-5"
+                style="width: 80px;"
+              />
+              <h5 style="color:rgba(246, 211, 101, 1);">{{ data.user_details[1] }}</h5>
+              <p>Username</p>
+              <i class="far fa-edit mb-5"></i>
             </div>
+            <div class="col-md-8">
+              <div class="card-body p-4">
+                <h6>Information</h6>
+                <hr class="mt-0 mb-4">
+                <div class="row pt-1">
+                <div class="col-6 mb-3">
+                    <h6>Name</h6>
+                    <p class="text-muted">{{ data.user_details[2] }}</p>
+                  </div>
+                  <div class="col-6 mb-3">
+                    <h6>Email</h6>
+                    <p class="text-muted">{{ data.user_details[4] }}</p>
+                  </div>
+                  <div class="col-6 mb-3">
+                    <h6>Phone</h6>
+                    <p class="text-muted">{{ data.user_details[5] }}</p>
+                  </div>
+                  <div class="col-6 mb-3">
+                    <h6>Address</h6>
+                    <p class="text-muted">{{ data.user_details[3] }}</p>
+                  </div>
+                </div>
+                <h6>More</h6>
+                <hr class="mt-0 mb-4">
+                <div class="row pt-1">
+                   
+                  <div class="col-6 mb-3">
+                    <h6>Wallet Balance</h6>
+                    <p class="text-muted"> {{ data.user_details[6] }}</p>
+                  </div>
+                  
+                </div>
+                <div class="d-flex justify-content-start">
+                  <a href="#!"><i class="fab fa-facebook-f fa-lg me-3"></i></a>
+                  <a href="#!"><i class="fab fa-twitter fa-lg me-3"></i></a>
+                  <a href="#!"><i class="fab fa-instagram fa-lg"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+        	<div class="col-md-12 text-center">
+	
+	                <a class="btn btn-primary " href="/edit_user_detail">Edit Details</a>
+        	        <a class="btn btn-primary ms-5" href="/addMoney">Add Money</a>
+		</div>
+       </div>
 
             <div class="mt-5">
                 <h2>Current Bookings</h2>
@@ -64,5 +118,11 @@
                 </table>
             </div>
         </div>
+
+      </div>
+    </div>
+  </div>
+</section>
     </body>
 </html>
+
