some template copy paste

--- a/templates/show_hotels.html
+++ b/templates/show_hotels.html
@@ -6,7 +6,7 @@
   	</head>
 <body>
     <div class="container">
-      	<h1>Tags</h1>
+      	<h1>Search N Book</h1>
       	<br>
       	
 		<form action="" method="post">
