--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,17 +1,78 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--  <head>-->
+<!--    <title>Flask Intro</title>-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
+<!--  </head>-->
+<!--  <body>-->
+<!--    <div class="container">-->
+<!--      <h1>Welcome to Flask!</h2>-->
+<!--      <br>-->
+<!--      <p>Click <a href="/">here</a> to go home.</p>-->
+<!--      <p>Click <a href="/user_login">here</a> to go to login page.</p>-->
+<!--      <p>Click <a href="/admin_login">here</a> to go to admin page.</p>-->
+<!--    </div>-->
+<!--  </body>-->
+<!--</html>-->
+
+
+
+
+
+
 <html>
   <head>
-    <title>Flask Intro</title>
+    <title>Login User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
+
+  </style>
   <body>
-    <div class="container">
-      <h1>Welcome to Flask!</h2>
-      <br>
-      <p>Click <a href="/">here</a> to go home.</p>
-      <p>Click <a href="/user_login">here</a> to go to login page.</p>
-      <p>Click <a href="/admin_login">here</a> to go to admin page.</p>
+<section class="vh-100">
+  <div class="container py-5 h-100">
+    <div class="row d-flex align-items-center justify-content-center h-100">
+      <div class="col-md-8 col-lg-7 col-xl-6">
+        <img src="https://cdn.dribbble.com/users/185738/screenshots/10637360/media/bd2ceb90ad7fec03d1f6943f5962dcc6.jpg?compress=1&resize=1200x900&vertical=top" class="img-fluid" alt="Phone image">
+      </div>
+      <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+	<div class="container">
+        <div class="row">
+            <div class="col-lg-6 mb-4">
+	<div class="card" style="width: 18rem;">
+	  <img src="https://img.freepik.com/free-vector/illustrated-business-person-meditating_52683-60757.jpg?t=st=1646112160~exp=1646112760~hmac=66de3332b94875a4cd6f24382b57a117b560ca7de09fd86089382afb2504daea&w=900" class="card-img-top" alt="...">
+	  <div class="card-body">
+	  <div class="col-md-12 text-center">
+	    <a href="/admin_login" class="btn btn-primary">Admin Login</a>
+	    </div>
+	  </div>
+	</div>
+	</div>
+            <div class="col-lg-6 mb-4">
+	<div class="card" style="width: 18rem;">
+	  <img src="https://img.freepik.com/free-vector/businessman-character-avatar-isolated_24877-60111.jpg?w=740" class="card-img-top"  style = "max-width:82%;" alt="...">
+	  <div class="card-body">
+	  <div class="col-md-12 text-center">
+	    <a href="/user_login" class="btn btn-primary">User Login</a>
+	    </div>
+	  </div>
+	</div>
+	</div>
+            </div>
+<!--        <button class="btn btn-outline-primary">Button primary</button>-->
+
+
+      </div>
+       
     </div>
+  </div>
+</section>
+
+    
+
   </body>
 </html>
+
+
+
