Final push from my side

--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -72,6 +72,7 @@
 	
 	                <a class="btn btn-primary " href="/edit_user_detail">Edit Details</a>
         	        <a class="btn btn-primary ms-5" href="/addMoney">Add Money</a>
+                  <a class="btn btn-primary ms-5" href="/show_hotels">Search for Hotels</a>
 		</div>
        </div>
        
@@ -111,7 +112,7 @@
                             <td>{{ x[6] }}</td>
                             <td>{{ x[7] }}</td>
                             <td>{{ x[8] }}</td>
-<!--                            <td><a class="btn btn-primary" href="/reviews/{{ x[9] }}/{{ x[10] }}">See Reviews</a></td>-->
+<!--                            <td><a class="btn btn-primary" href="/reviews/{{ x[9] }}">See Reviews</a></td>-->
                         </tr>
                         {% endfor %}
                         {% endif %}
