--- a/templates/room_details.html
+++ b/templates/room_details.html
@@ -101,7 +101,7 @@
 						<td>{{ x[9] }}</td>
 						<td></td>
 						<td><a class="btn btn-primary" href="{{ url_for('booking', hotelid=x[11], roomid=x[0]) }}">Book</a></td>
-						<td><a class="btn btn-primary" href="/reviews/{{ x[11] }}/{{ x[0] }}">Reviews</a></td>
+						<td><a class="btn btn-primary" href="/reviews/{{ x[11] }}">Reviews</a></td>
 					</tr>
 					{% endfor %}
 					{% endif %}
