Now use this database and not local

--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -70,9 +70,10 @@
         </div>
         	<div class="col-md-12 text-center">
 	
-	                <a class="btn btn-primary " href="/edit_user_detail">Edit Details</a>
-        	        <a class="btn btn-primary ms-5" href="/addMoney">Add Money</a>
-                  <a class="btn btn-primary ms-5" href="/show_hotels">Search for Hotels</a>
+	                <a class="btn btn-sm btn-primary " href="/edit_user_detail">Edit Details</a>
+        	        <a class="btn btn-sm btn-primary ms-5" href="/addMoney">Add Money</a>
+                  <a class="btn btn-sm btn-primary ms-5" href="/show_hotels">Search for Hotels</a>
+                  <a class="btn btn-sm btn-primary ms-5" href="/logOut">Logout</a>
 		</div>
        </div>
        
