--- a/templates/edit_user_detail.html
+++ b/templates/edit_user_detail.html
@@ -1,33 +1,82 @@
+
+
+
+
+
+
 <html>
   <head>
-    <title>Register</title>
+    <title>Login User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container">
-      <h1>Register</h1>
-      <br>
-      {{ data[0] }}
-      <form action="" method="post">
-        <input type="text" placeholder="Username" name="username" value="{{
-          data[0][0] }}" disabled>
-          <input type="name" placeholder="Name" name="name" value="{{
-          data[0][1] }}">
-          <input type="text" placeholder="Address" name="address" value="{{
-          data[0][2] }}">
-          <input type="email" placeholder="Email" name="email" value="{{
-          data[0][3] }}">
-          <input type="tel" placeholder="Phone" name="phone" value="{{
-          data[0][4] }}">
-         <input type="password" placeholder="Password" name="password" value="{{
-          data[0][5] }}">
-        <input class="btn btn-default" type="submit" value="Login">
-      </form>
-      {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
-      {% endif %}
+<section class="vh-100">
+  <div class="container py-5 h-100">
+    <div class="row d-flex align-items-center justify-content-center h-100">
+      <div class="col-md-8 col-lg-7 col-xl-6">
+        <img src="https://img.freepik.com/free-vector/paper-pencil-cartoon-icon-illustration-education-object-icon-concept-isolated-flat-cartoon-style_138676-2137.jpg?w=740" class="img-fluid" alt="Phone image">
+      </div>
+      <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+        <form action="" method="post">
+
+
+        
+          <!-- Email input -->
+          <div class="form-outline mb-4">
+            <input type="text" id="form1Example13" class="form-control form-control-lg" placeholder="Username" name="username" value="{{
+           data[0][0] }}" />
+            <label class="form-label" for="form1Example13">Username</label>
+          </div>
+          
+          <div class="form-outline mb-4">
+            <input type="text" id="form1Example4" class="form-control form-control-lg" placeholder="Name" name="name" value="{{
+           data[0][1] }}" />
+            <label class="form-label" for="form1Example4">Name</label>
+          </div>
+          
+          <div class="form-outline mb-4">
+            <input type="text" id="form1Example5" class="form-control form-control-lg" placeholder="Address" name="address" value="{{
+           data[0][2] }}" />
+            <label class="form-label" for="form1Example5">Address</label>
+          </div>
+          
+          
+          <div class="form-outline mb-4">
+            <input type="text" id="form1Example6" class="form-control form-control-lg" placeholder="Email" name="email" value="{{
+           data[0][3] }}" />
+            <label class="form-label" for="form1Example6">Email</label>
+          </div>
+          
+          
+          
+          <div class="form-outline mb-4">
+            <input type="text" id="form1Example5" class="form-control form-control-lg" placeholder="Phone" name="phone" value="{{
+           data[0][4] }}" />
+            <label class="form-label" for="form1Example5">Phone</label>
+          </div>
+          
+          <!-- Password input -->
+          <div class="form-outline mb-4">
+            <input type="password" id="form1Example23" class="form-control form-control-lg" placeholder="Password" name="password" value="{{
+           data[0][5] }}" />
+            <label class="form-label" for="form1Example23">Password</label>
+          </div>
+
+
+          <!-- Submit button -->
+          <button type="submit" class="btn btn-primary btn-lg btn-block" value="Login">Signup</button>
+        </form>
+      </div>
+       {% if error %}
+ <div class="alert alert-danger" role="alert">
+<strong>Error:</strong> {{ error }}
+</div>
     </div>
+  </div>
+</section>
+
+      {% endif %}
+
   </body>
 </html>
-
