--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
       <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
         <form action="" method="post">
 
-        <input class="btn btn-default" type="submit" value="Login">
+
         
           <!-- Email input -->
           <div class="form-outline mb-4">
@@ -35,8 +35,15 @@
 
 
           <!-- Submit button -->
-          <button type="submit" class="btn btn-primary btn-lg btn-block" value="Login">Login</button>
+                    <button type="submit" class="btn btn-primary btn-lg btn-block" value="Login">Login</button>
+              
+
         </form>
+         <div class="col-md-12 text-center">
+
+	                <a class="btn btn-primary " href="/register">Create Account</a>
+        	     
+	</div>
       </div>
        {% if error %}
  <div class="alert alert-danger" role="alert">
